--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -100,12 +100,12 @@
                     }            
                 }
             }
-            .senha{        
+            .senha1{
                 margin-left: 36dvh;
-                font-family: "Inter", sans-serif;
+                font-family:"Inter", sans-serif;
                 font-weight: 800;
                 color: #8a8989;
-                font-size: 2dvh;
+                font-size:2dvh;
                 text-decoration: none;
             }
             .error-message{
@@ -212,8 +212,8 @@
         .login{
             .informaçoes{
                 
-                .senha{
-                   margin-left: 23dvh;
+                .senha1{
+                   margin-left: 22dvh;
                 }
             }
         }
