--- a/src/pages/agendamentoCliente/index.scss
+++ b/src/pages/agendamentoCliente/index.scss
@@ -394,6 +394,10 @@
     .div-mae { 
         .agenda {
             .esq2{
+                img{
+                    width: 4dvh;
+                    height: 4dvh;   
+                }
                 .my-agenda{
                     text-align: center;
                     font-size: 2.9dvh;
