--- a/src/pages/agendamentoCliente/index.scss
+++ b/src/pages/agendamentoCliente/index.scss
@@ -23,7 +23,7 @@
             overflow-y: auto;
             position: relative;
         
-            img {
+            .casa {
                 position: absolute; 
                 top: 0;
                 left: 0;
@@ -42,6 +42,48 @@
                 font-family: 'Roboto', sans-serif;
                 font-weight: 600;
                 text-align: center; 
+            }
+
+            .sem-agendamentos{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                margin-top: 21dvh;
+                .sem-agenda{
+                    height: 12dvh;
+                    width: 12dvh;
+                }
+                p{
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 600;
+                    text-align: center;
+                    color: #8A37BB;
+                    font-size: 2dvh;
+                    width: 30dvh;
+                    margin-top: 2dvh;
+                }
+                .agendar{
+                    height: 4dvh;
+                    width: 16dvh;
+                    border-radius: 7dvh;
+                    background: linear-gradient(55deg, #6f07cf 35%, #a010b3,);
+                    border: none;
+                    color: #fff;
+                    font-size: 2dvh;
+                    box-shadow: 0 8px 15px rgba(0, 26, 255, 0.3);
+                    font-family: "Inter", sans-serif;
+                    font-weight: 600;
+                    transition: transform 1s ease;
+                    text-decoration: none;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-top: 2dvh;
+                    &:hover {
+                        transform: scale(1.09); 
+                    }
+                }
             }
        
         .card-info {
@@ -360,12 +402,17 @@
                 }
             }
             .dir{
+                iframe{
+                    width: 90%;
+                    height: 29dvh;
+                }
                 .card-info{
                     padding: 1dvh;
                     border-radius: 1dvh;
                     position: absolute; 
                     top: 49.6dvh;
                     z-index: 1;
+                    height: 8dvh;
                     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
                     .txt{
                         gap: 0.5dvh;
@@ -378,7 +425,7 @@
                             font-family: 'Roboto', sans-serif;
                             font-weight: 500;
                             color: #A3A3A3;
-                            font-size: 1.2dvh;
+                            font-size: 1dvh;
                         }
                     }
                     img{
@@ -394,6 +441,7 @@
     .div-mae { 
         .agenda {
             .esq2{
+                width: 100%;
                 img{
                     width: 4dvh;
                     height: 4dvh;   
@@ -404,7 +452,7 @@
                 }
                 .card-info {
                     height: 17dvh; 
-                    width: 22dvh; 
+                    width: 46dvh; 
                     border-radius: 1dvh; 
                     display: flex;
                     flex-direction: row;
@@ -418,7 +466,6 @@
                         .butao {
                             display: flex;  
                             margin-top: 1.5dvh;
-                            flex-direction: column;
                             .b1 {
                                 height: 3dvh; 
                                 width: 9dvh; 
@@ -432,7 +479,6 @@
                                 border-radius: 0.9dvh; 
                                 font-size: 1.5dvh;
                                 margin-left: 2dvh;
-                                margin-top: 1dvh;
 
                             }
                         }
@@ -441,7 +487,7 @@
                             width: 11dvh; 
                             border-radius: 0.4dvh; 
                             margin-left: 2dvh;
-                            margin-top: 1.8dvh;
+                            margin-top: 0.2dvh;
                             font-size: 1.6dvh; 
                             padding: 0.2dvh; 
                         }
@@ -455,39 +501,19 @@
                         }
         
                         .serviço {
-                            font-size: 1.2dvh; 
+                            font-size: 2dvh; 
                             margin-left: 2dvh;
                             margin-top: 1dvh;
                         }
                     }
                 }
             }
+            .divisao{
+                display: none;
+            }
             .dir{
-                .card-info{
-                    padding: 1dvh;
-                    border-radius: 1dvh;
-                    position: absolute; 
-                    top: 49.6dvh;
-                    z-index: 1;
-                   
-                    .txt{
-                        gap: 0.5dvh;
-                        .p1{
-                            font-family: 'Roboto', sans-serif;
-                            font-weight: 800;
-                        }
-                        .p2{
-                            width: 14dvh;
-                            font-family: 'Roboto', sans-serif;
-                            font-weight: 500;
-                            color: #A3A3A3;
-                            font-size: 1.2dvh;
-                        }
-                    }
-                    img{
-                    display: none;
-                    }
-                }
+                display: none;
+            
             }
 
         }
