--- a/src/pages/novaSenha/index.scss
+++ b/src/pages/novaSenha/index.scss
@@ -61,7 +61,7 @@
                         border-radius: 10dvh;
                     }                  
                     input {
-                        width: 46dvh;
+                        width: 43dvh;
                         height: 5dvh;
                         border-radius: 5dvh;
                         border: none;
@@ -97,7 +97,7 @@
                         border-radius: 10dvh;
                     }            
                     input {
-                        width: 46dvh;
+                        width: 43dvh;
                         height: 5dvh;
                         border-radius: 5dvh;
                         border: none;
@@ -111,6 +111,19 @@
                     }            
                 }
             }
+            .error{
+                font-family: "Inter", sans-serif;
+                font-weight: 500;
+                color: rgb(189, 36, 9);
+                display: flex;
+                justify-content: center;
+                margin-top: 6dvh;
+                img{
+                    width: 2dvh;
+                    height: 2dvh;
+                    margin-right: 1dvh;
+                }
+            }
             .senha{        
                 margin-left: 36dvh;
                 font-family: "Inter", sans-serif;
@@ -122,7 +135,7 @@
             .botao{
                 display: flex;
                 justify-content: center;
-                margin-top: 7dvh;
+                margin-top: 4dvh;
                 gap: 5dvh;
                 .b1{
                     height: 5dvh;
