--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center; 
+
     
     .login{
         display: flex;
@@ -16,20 +17,42 @@
         
         
         .informaçoes{
+            
             background-color: #fff;
             height: 55dvh;
             width: 70dvh;
             border-top-left-radius: 4dvh;
             border-bottom-left-radius: 4dvh;
             box-shadow: 0 8px 150px rgba(0, 26, 255, 0.3);
-            h1{
-                font-size: 8dvh;
-                text-align: center;
-                margin-top: 2.2dvh;
-                font-family: "Inter", sans-serif;
-                font-weight: 600;
-                color: #5c5c5c;
+            .top {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between; 
+                
+                h1 {
+                    font-size: 8dvh;
+                    text-align: center;
+                    margin-top: 2.2dvh;
+                    font-family: "Inter", sans-serif;
+                    font-weight: 600;
+                    color: #5c5c5c;
+                    flex-grow: 1;
+                    margin-right: 6dvh;
+                }
+                
+                .casa {
+                    height: 5dvh;
+                    width: 5dvh;
+                    margin: 1dvh;
+                    transition: transform 1s;
+                    
+                    &:hover {
+                        transform: scale(1.1);
+                    }
+                }
             }
+            
+            
             .inp{
                 display: flex;
                 flex-direction: column;
